--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://yashwanth-854.github.io/TextUtils",
+  "homepage": "https://yashwanth-854.github.io/textutil",
   "name": "hi",
   "version": "0.1.0",
   "private": true,
